Sun Jan  2 13:44:55 2005 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* gnubgmodule.h - reinclude config.h to set HAVE_FSTAT (gcc
	  doesn't like trying to redfine it and config.h is not
	  idempotent)
	* gnubgmodule.c - replace _getcwd with getcwd, _MAX_PATH with 
	  PATH_MAX, which should be available in all C implementations

Sun Jan  2 11:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubgmodule.c: Look for local python installation (windows)

Sun 12 Dec 13:27:54 gmt 2004 Jim Segrave <jes@jes-2.demon.nl>

	* fix some bugs in scripts/database.py
	
Sun 28 Nov 01:04:30 GMT 2004 Jim Segrave <jes@jes-2.demon.nl>

	* import.c - patch Fibs code to ignore non-game lines in input
	
Wed Nov  23 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* play.c: Fix wrong resign acceptance
	* eval.c, bearoff.c, set.c: Hypergammon fixes

Thu Nov 18 23:06:46 2004 GMT  Holger Bochnig <hbgg@gmx.net>

	* bearoffdump.c: allow posids as arguments

Mon Nov  15 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c (and others) : Simplify widget grabbing, hopefully
	fixing multiple "can't move" bug

Mon Nov  8 11:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c : Fixed bug with credits

Fri Nov  5 14:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.sql, gtkgame.c, realational.c, database.py :
	Added multiple environments to the realational database

Fri Nov  5 14:08:48 2004  Joseph Heled  <joseph@gnubg.org>

	* eval.c (EvalInitialise): Fix bug with prunning. Order of crash
	and race nets was reversed, So crashed/race prune nets were
	returning garbage.

Thu Nov  4 13:12:07 2004  Joseph Heled  <joseph@gnubg.org>

	* eval.c: Make evals after prunning cubeful. See if it makes a
	difference. Would be nice to offer this as a global option.

Wed Nov 03 20:44:45 2004   Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (EvalWidget): Fix a copy'n'waste error
	* eval.c: Change 'Tiny' movefilter to 5 candidates.
